# twitterclone

./: pyproject.toml
authentication/: forms.py  urls.py  views.py
notifications/: models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
templates/: base.html
templates/authentication/: index.html  login.html  register.html
templates/notifications/: notifications.html
templates/tweet/: tweet_detail.html  tweetform.html
templates/twitteruser/: twitteruser_detail.html
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_user.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
