[tool.poetry]
name = "twitterclone"
version = "0.4.0"
description = "A basic twitter clone without much styling"
authors = ["Mike A. <jimalik2525@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
